# cfd-combustion-engine

./: .gitignore  CMakeLists.txt  COMPLETE_PROJECT_SUMMARY.md  FILE_MANIFEST.md  PROGRESS.md  QUICKSTART.md  README.md  TASKS_4_TO_8_COMPLETE.md  create_placeholders.sh
.kiro/specs/cfd-combustion-engine/: design.md  requirements.md  tasks.md
data/: README.md
data/configs/: example_config.json
docs/: 00_INDEX.md  01_CORE.md  14_EXAMPLES.md  CODE_REFERENCE.md  NEWS_PIPELINE_CONCEPTS.md  README.md
include/boundary/: BoundaryCondition.h  BoundaryConditionManager.h
include/chemistry/: ChemistryIntegrator.h  ChemkinReader.h  ReactionMechanism.h  Species.h
include/combustion/: CombustionModel.h  FlameTracker.h  LaminarFlameSpeed.h  SparkIgnition.h
include/core/: Field.h  FieldManager.h  Mesh.h  Vector3D.h
include/geometry/: BoundaryExtractor.h  GeometryReader.h  GeometryValidator.h  STLReader.h
include/io/: CheckpointManager.h  ConfigReader.h  Logger.h  OutputWriter.h
include/mesh/: MeshGenerator.h  MeshQuality.h
include/parallel/: DomainDecomposer.h  ParallelCommunicator.h
include/solver/: CFDSolver.h  FluidDynamics.h  ThermodynamicProperties.h
include/turbulence/: KEpsilonModel.h  KOmegaSSTModel.h  TurbulenceModel.h
python/: __init__.py  analysis.py  data_reader.py  requirements.txt  spark_analysis.py  visualization.py
python/news_pipeline/: README.md  __init__.py  config.py  pipeline.py
src/: main.cpp
src/boundary/: BoundaryCondition.cpp  BoundaryConditionManager.cpp
src/chemistry/: ChemistryIntegrator.cpp  ChemkinReader.cpp  ReactionMechanism.cpp  Species.cpp
src/combustion/: CombustionModel.cpp  FlameTracker.cpp  LaminarFlameSpeed.cpp  SparkIgnition.cpp
src/core/: Field.cpp  FieldManager.cpp  Mesh.cpp  Vector3D.cpp
src/geometry/: BoundaryExtractor.cpp  GeometryReader.cpp  GeometryValidator.cpp  STLReader.cpp
src/io/: CheckpointManager.cpp  ConfigReader.cpp  Logger.cpp  OutputWriter.cpp
src/mesh/: MeshGenerator.cpp  MeshQuality.cpp
src/parallel/: DomainDecomposer.cpp  ParallelCommunicator.cpp
src/solver/: CFDSolver.cpp  FluidDynamics.cpp  ThermodynamicProperties.cpp
src/turbulence/: KEpsilonModel.cpp  KOmegaSSTModel.cpp  TurbulenceModel.cpp
tests/: CMakeLists.txt  test_field.cpp  test_geometry.cpp  test_mesh.cpp  test_vector3d.cpp
